--- a/.github/workflows/parallel_job.yml
+++ b/.github/workflows/parallel_job.yml
@@ -13,6 +13,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Update Status
+        run: |
+          ACCESS_TOKEN="${{ secrets.ACCESS }}"
+          WORKFLOW_ID="${{ github.run_id }}"
+          REPO_OWNER="${{ github.repository_owner }}"
+          REPO_NAME="${{ github.repository }}"
+          
+          GRAPHQL_API_URL="https://api.github.com/graphql"
+          
+          curl -X POST -H "Authorization: bearer $ACCESS_TOKEN" -d \
+            "{
+              \"query\": \"mutation {
+                updateSubscription(input: {clientMutationId: \\\"1\\\", state: \"IN_PROGRESS\"}) {
+                  clientMutationId
+                }
+              }\"
+            }" $GRAPHQL_API_URL
 
       - name: Deploy Job 1 Step
         run: |
